apps/immich/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-server
  namespace: immich
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Immich"
    gethomepage.dev/description: "Photo management"
    gethomepage.dev/group: "Media"
    gethomepage.dev/icon: "immich.png"
    gethomepage.dev/href: "https://immich.storsteinbo.no"
spec:
  type: NodePort
  selector:
    app: immich-server
  ports:
    - protocol: TCP
      port: 2283
      targetPort: 2283
      nodePort: 30283
      name: http
